<resources>
    <string name="app_name">MySymptomApp</string>
    <string name="et_name">Nombre</string>
    <string name="et_email">Email</string>
    <string name="et_password">Password</string>
    <string name="btn_register">Registrar Usuario</string>
    <string name="bt_signout">Cerrar Sesión</string>
    <string name="btn_login">Iniciar Sesión</string>
    <string name="btn_tologin">Ya Tengo Cuenta</string>
    <string name="btn_toaddoccurence">Agregar Síntoma</string>
    <string name="btn_tolistoccurencesview">Mis Síntomas</string>
    <string name="tv_addOccurence">Describe el padecimiento que estás experimentando</string>
    <string name="hint_et_title">Breve Título</string>
    <string name="hint_et_desc">Descripción</string>
    <string name="btn_addoccurence">Agregar</string>
    <string name="btn_gotoprofile">Perfíl</string>
    <string name="tv_spinner_info">Selecciona la intensidad de la dolencia</string>
    <string name="tv_register">Registrado:</string>
    <string name="title_activity_see_symptom">SeeSymptomActivity</string>
    <string name="et_header_symptom">Información del Síntoma</string>
    <string name="et_title">Título:</string>
    <string name="et_desc">Descripción:</string>
    <string name="et_intensity">Intensidad:</string>
    <string name="et_datetime">Fecha:</string>
    <string name="btn_delete">Eliminar</string>
    <string name="btn_confirm">Confirmar</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="btn_update">Editar</string>
    <string name="title_update_symp">Editar Síntoma</string>
    <string name="label_user_register">Registrar Usuario</string>
    <string name="label_user_login">Ingresar</string>
    <string name="label_list_symptoms">Mis Síntomas</string>
    <string name="label_add_symptom">Agregar Síntoma</string>
    <string-array name="intensities">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="about">Información</string>
    <string name="report_text">Seleccionar el intervalo de tiempo para el reporte</string>
    <string name="btn_reports_section">Reportes</string>
    <string name="toast_success_add_symptom">Síntoma agregado exitosamente</string>
    <string name="toast_fail_add_symptom">Hubo un problema agregando el síntoma</string>
    <string name="toast_exception_add_symptom_req_fields">Los campos título y descripción no pueden estar vacios</string>
    <string name="toast_success_update_symptom">Síntoma actualizado exitosamente</string>
    <string name="toast_fail_update_symptom">Ocurrio un error. El síntoma no pudo ser actualizado</string>
    <string name="toast_unmodified_update_symptom">No se registran cambios</string>
    <string name="toast_incorrect_date_selection">Intervalo de fechas incorrecto. Fecha final debe ser posterior a fecha inicial</string>
    <string name="toast_exception_select_date">Al menos una fecha no fue ingresada. Fecha inicial y final son requeridas</string>
    <string name="toast_share_symptoms_report">Comparte tus padecimientos con el mundo</string>
    <string name="sharing_symptom_title">Elige como compartir tus síntomas</string>
    <string name="report_not_found_in_interval_time">No se encontraron síntomas en el intervalo de fechas especifícadas</string>
    <string name="message_load_symptoms">Cargando síntomas...</string>
    <string name="message_no_symptoms_in_bd">No hay síntomas registrados aún en el sistema...</string>
    <string name="message_connection_problem">Por favor revisa que tengas acceso a internet</string>
    <string name="validate_fields_login">Complete los campos del formulario</string>
    <string name="toast_success_login">Acceso autorizado. Cargando datos...</string>
    <string name="toast_success_user_register">Cuenta creada satisfactoriamente. Cargando datos...</string>
    <string name="toast_fail_login">No se pudo iniciar sesión, compruebe los datos ingresados</string>
    <string name="toast_password_validation">La contraseña debe tener al menos 6 caracteres</string>
    <string name="toast_register_user_transaction">Registrando usuario...</string>
    <string name="toast_fail_user_register">No se pudo registrar los datos correctamente</string>
    <string name="toast_fail_user_register_two">No se pudo registrar este usuario: </string>
    <string name="delete_symptom_warning_title">Advertencia</string>
    <string name="delete_symptom_warning_text">Esta acción es irreversible ¿Está seguro de eliminar este síntoma?</string>
    <string name="delete_symptom_warning_ok">Ok</string>
    <string name="delete_symptom_warning_cancel">Cancelar</string>
    <string name="toast_delete_symptom_success">Síntoma eliminado exitosamente</string>
    <string name="toast_delete_symptom_fail">Hubo un error. No se pudo eliminar el síntoma</string>
    <string name="menu_filter_symptoms_asc">Ordenar por más antiguos</string>
    <string name="menu_filter_symptoms_desc">Ordenar por más recientes</string>
    <string name="btn_initial_date">Fecha inicial</string>
    <string name="btn_final_date">Fecha final</string>
    <string name="btn_generate_reports">Generar</string>
    <string name="btn_share_reports">Compartir</string>
    <string name="info">Pensado como una herramienta útil para personas olvidadizas a la hora de ir al médico. La aplicación sirve como un diario de síntomas, si te sientes mal solo escribe tus dolencias en la aplicación. Luego, cuando estés en atención médica; puedes compartir todos esos síntomas con tu médico como un informe por fechas. La aplicación también es una excelente herramienta de comunicación para ayudar a personas sordo mudas.</string>
</resources>
