<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/minimalisbg"
    android:gravity="center"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="18sp"
        android:text="@string/et_name" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:text="@string/et_email" />

    <Button
        android:id="@+id/btnAddOccurenceView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:text="@string/btn_toaddoccurence" />

    <Button
        android:id="@+id/btnToOccurenceListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:text="@string/btn_tolistoccurencesview" />

    <Button
        android:id="@+id/btnReports"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:text="@string/btn_reports_section" />
</LinearLayout>