<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="350dp"
    android:layout_height="475dp"
    android:background="@color/colorPrimaryDark"
    android:padding="5dp"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/txtclose"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:textColor="#00FF33"
        android:text="X"
        android:textStyle="bold"
        android:layout_gravity="end"
        android:gravity="center"
        ></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="18dp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"></TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info"
            android:textColor="#AAFFAA"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"></TextView>
    </LinearLayout>

</LinearLayout>