<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundColor"
    tools:context=".GenerateReportsActivity">

    <TextView
        android:id="@+id/tvGenRepText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/report_text"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnInitialDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colorPrimary"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/btn_initial_date"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etInitialDate"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:enabled="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnFinalDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/colorPrimary"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/btn_final_date"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etFinalDate"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:enabled="false" />

    </LinearLayout>

    <EditText
        android:id="@+id/etReport"
        android:layout_width="match_parent"
        android:layout_height="430sp"
        android:layout_margin="10dp"
        android:layout_weight="40"
        android:ems="10"
        android:background="@color/textViewBackgroundColor"
        android:gravity="start|top"
        android:inputType="textMultiLine" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnGenerateReport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/btn_generate_reports"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnShareReport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/common_google_signin_btn_text_light_disabled"
            android:drawableLeft="@drawable/ic_share"
            android:enabled="false"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/btn_share_reports"
            android:textColor="@android:color/white" />

    </LinearLayout>

</LinearLayout>